# azsubspray

./: README.md  pyproject.toml
azsubspray/: azsubspray.py
azsubspray.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
