[build-system]
requires = ["setuptools>=42","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azsubspray"
version = "0.1.0"
description = "Spraying tool to list Azure subscriptions."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
authors = [
  { name = "Jake Otte", email = "jake123otte1@gmail.com" }
]

dependencies = [
    "requests",
    "msal",
    "colorama"
]

[project.scripts]
azsubspray = "azsubspray.azsubspray:main"
